Fix button alignment

--- a/BakerySite/css/style.css
+++ b/BakerySite/css/style.css
@@ -142,7 +142,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family: 'Pacifico', cursive;
 }
 
 .background {
@@ -215,11 +215,22 @@ body, html {
     .task-form {
         width: 100%;
     }
+    #taskAddButton {
+        width: 95.6%;
+    }
 }
 @media (min-width: 768px) {
     .task-form {
         width: 80%;
         justify-content: center;
+    }
+    #taskAddButton {
+        width: 77.7%;
+    }
+}
+@media (min-width: 1200px) {
+    #taskAddButton {
+        width: 78.5%;
     }
 }
 #recipeIDForm, #amountToBake, #dueDate, #assignedEmployeeID, #taskNotes {
@@ -241,4 +252,11 @@ body, html {
  */
 .faux-task-row {
     height: 1.5em;
+}
+
+.brand-text {
+    font-size: 1.5em;
+    color: #4b2e1e;
+    margin-left: 10px;
+    font-family: 'Pacifico', cursive;
 }
